work on part footer

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       <!-- Homepage -->
       <section
         id="Home"
-        class="lg:bg-black/80 lg:h-auto lg:bg-[#151515] lg:overflow-y-auto mobile:bg-black/40 lg:bg-gradient-to-t lg:from-black/40 lg:to-black/50   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 mobile:px-0 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
+        class="lg:h-auto lg:bg-[#E1E1E1] lg:overflow-y-auto mobile:bg-black/40 lg:bg-gradient-to-t   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 mobile:px-0 lg:pt-32 lg:grid lg:grid-cols-3 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
       >
         <!-- firstchild -->
         <div
