--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <script src="./js/index.js" defer type="module"></script>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="shortcut icon" href="./javascript.svg" type="image/x-icon">
     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   </head>
   <body class="bg-[#242424]">
@@ -50,7 +51,7 @@
       <!-- Homepage -->
       <section
         id="Home"
-        class="lg:h-auto lg:bg-[#E1E1E1] lg:overflow-y-auto mobile:bg-black/40 lg:bg-gradient-to-t   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 mobile:px-0 lg:pt-32 lg:grid lg:grid-cols-3 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
+        class="lg:h-auto lg:bg-[#E1E1E1] lg:overflow-y-auto  mobile:bg-black/40 lg:bg-gradient-to-t   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 mobile:px-0 lg:pt-32 lg:grid lg:grid-cols-3 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
       >
         <!-- firstchild -->
         <div
