work on part about

--- a/public/index.html
+++ b/public/index.html
@@ -166,10 +166,9 @@
         <div class="h-full absolute w-full bg-black/40 flex justify-center  items-center space-y-5">
           <div class="">
 
-           
             <div class="bg-white  relative z-0 h-72 rounded-md w-96">
-              <div class="w-20 h-20 bg-white -top-[7%]  rounded-full absolute left-[40%]"></div>
-              <div class="w-[70px] h-[70px] bg-[#0099ff] z-10  flex justify-center items-center -top-[6%] rounded-full absolute left-[159px]">
+              <div class="w-20 h-20 bg-[#EAE3DD] -top-[7%]  rounded-full absolute left-[40%]"></div>
+              <div class="w-[70px] h-[70px] bg-[#0099ff] shadow-md shadow-blue-400 hover:bg-blue-500 duration-500 z-10  flex justify-center items-center -top-[6%] rounded-full absolute left-[159px]">
                 <i class="fa fa-play text-white text-[25px]"></i>
               </div>
               <div class="overflow-hidden rounded-md h-full z-0 w-full absolute">
