--- a/public/index.html
+++ b/public/index.html
@@ -162,9 +162,9 @@
        
       </section>
       <!-- About -->
-      <section id="About" class="bg-[#1A2027] relative">
+      <section id="About" class="bg-white relative">
         <div class="h-full absolute w-full bg-black/40 flex justify-center  items-center space-y-5">
-          <div class="">
+          <div class="lg:flex gap-4 mobile:space-y-16 lg:space-y-0 ">
 
             <div class="bg-white  relative z-0 h-72 rounded-md w-96">
               <div class="w-20 h-20 bg-[#EAE3DD] -top-[7%]  rounded-full absolute left-[40%]"></div>
@@ -177,6 +177,26 @@
               <div class="bg-[#0099ff] text-white font-semibold w-24 h-10 absolute right-2 bottom-2 rounded-full flex justify-center items-center">
                   <span>Buy Now</span>
               </div>
+            </div>
+
+             <div class="bg-white  relative  z-0 h-72 rounded-md w-96">
+              <div class="w-20 h-20 bg-[#0099ff] -top-[13%]  rounded-full absolute left-[40%]"></div>
+              <div class="w-[70px] h-[70px] bg-[#eae3dd] duration-500 z-10  flex justify-center items-center -top-[11%] rounded-full absolute left-[159px]">
+                <!-- <i class="fa fa-play text-white text-[25px]"></i> -->
+              </div>
+              <div class="overflow-hidden rounded-md h-full w-full  bg-[#eae3dd] border-t border-[#0099ff] z-40  absolute">
+                <div class="relative w-full h-full flex justify-center items-center">
+
+                  <img src="./basket.png" class="h-20"  alt="">
+                  <div class="absolute bottom-10 text-2xl font-semibold text-[#0099ff]">
+                    <h3 class="text-center">STORED</h3>
+                  </div>
+                </div>  
+
+              </div>
+              <!-- <div class="bg-[#0099ff] text-white font-semibold w-24 h-10 absolute right-2 bottom-2 rounded-full flex justify-center items-center">
+                  <span>Buy Now</span>
+              </div> -->
             </div>
           </div>
         </div>
