custom upbar on mobile style

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,12 @@
   </head>
   <body class="bg-[#242424]">
     <div class="mobile:h-auto mobile:p-0 mobile:relative">
-      <div class="lg:hidden upbar bg-black h-20 fixed top-0 flex justify-start items-center pl-3 left-0 right-0   z-30 w-screen ">
-        <i class="fa-solid fa-bars text-white text-[25px]  rounded-md m-3 bg-black/50"></i>
+      <div class="lg:hidden upbar bg-white h-20 fixed top-0 flex justify-between items-center px-4 left-0 right-0   z-30 w-screen ">
+        <i class="fa-solid fa-bars text-gray-500 text-[25px] "></i>
+        <div class="flex items-center space-x-2">
+          <i class="fa fa-play" ></i>
+            <h4 class="font-semibold text-xl">PLAYING</h4>
+        </div>
       </div>
       <!-- navbar -->
       <div
@@ -182,7 +186,7 @@
              <div class="bg-white  relative  z-0 h-72 rounded-md w-96">
               <div class="w-20 h-20 bg-[#0099ff] -top-[13%]  rounded-full absolute left-[40%]"></div>
               <div class="w-[70px] h-[70px] bg-[#eae3dd] duration-500 z-10  flex justify-center items-center -top-[11%] rounded-full absolute left-[159px]">
-                <!-- <i class="fa fa-play text-white text-[25px]"></i> -->
+
               </div>
               <div class="overflow-hidden rounded-md h-full w-full  bg-[#eae3dd] border-t border-[#0099ff] z-40  absolute">
                 <div class="relative w-full h-full flex justify-center items-center">
@@ -192,11 +196,7 @@
                     <h3 class="text-center">STORED</h3>
                   </div>
                 </div>  
-
               </div>
-              <!-- <div class="bg-[#0099ff] text-white font-semibold w-24 h-10 absolute right-2 bottom-2 rounded-full flex justify-center items-center">
-                  <span>Buy Now</span>
-              </div> -->
             </div>
           </div>
         </div>
