custom store box

--- a/public/index.html
+++ b/public/index.html
@@ -183,12 +183,12 @@
               </div>
             </div>
 
-             <div class="bg-white  relative  z-0 h-72 rounded-md w-96">
+             <div class="bg-white  relative  z-0 h-72 rounded-b-2xl w-96">
               <div class="w-20 h-20 bg-[#0099ff] -top-[13%]  rounded-full absolute left-[40%]"></div>
-              <div class="w-[70px] h-[70px] bg-[#eae3dd] duration-500 z-10  flex justify-center items-center -top-[11%] rounded-full absolute left-[159px]">
+<div class="w-[70px] h-[70px] bg-[#999] duration-500 z-10  flex justify-center items-center -top-[11%] rounded-full absolute left-[159px]">
 
               </div>
-              <div class="overflow-hidden rounded-md h-full w-full  bg-[#eae3dd] border-t border-[#0099ff] z-40  absolute">
+              <div class="overflow-hidden rounded-b-2xl h-full w-full  bg-[#eae3dd]  z-40  absolute">
                 <div class="relative w-full h-full flex justify-center items-center">
 
                   <img src="./basket.png" class="h-20"  alt="">
